--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -32,7 +32,7 @@
   <div class="home"><a id="homeImg" href="index.html"><img id="navImage" src="media/nav_logo.png" alt="Moffat Bay Lodge Text Logo"/></a></div>
   <a class="rightNav" href="login.jsp">Reserve</a>
   <a class="rightNav" href="">Attractions</a>
-  <a class="rightNav" href="">About Us</a>
+  <a class="rightNav" href="about.html">About Us</a>
   <div class="account rightNav">
     <button class="dropbtn">Account
       <img class="dropIcon"src="media/drop_icon.png" alt="drop down icon"/>
@@ -70,7 +70,7 @@
           <div id="greyLinks">
             <a href="index.html"><li>Home</li></a>
             <a href="#"><li>Attractions</li></a>
-            <a href="#"><li>About Us</li></a>
+            <a href="about.html"><li>About Us</li></a>
           </div>
         </div>
       </ul>
@@ -96,7 +96,7 @@
       ut labore et dolore magna
       aliqua.
     </p>
-    <div class="learnMore"><a href="index.html">Learn More</a></div>
+    <div class="learnMore"><a href="about.html">Learn More</a></div>
   </div>
   <div class="img" id="aboutFlexImg"><img id="aboutImg"src="media/about.jpg" alt="Lodge Employee Photo"/></div>
   <div class="img"><img id="attractImg"src="media/scuba.jpg" alt="Scuba Diver Photo"/></div>
@@ -135,7 +135,7 @@
   <div class="col4">
     <ul>
       <li><a href="">Attractions</a></li>
-      <li><a href="">About Us</a></li>
+      <li><a href="about.html">About Us</a></li>
     </ul>
   </div>
   <div class="col5">
