reservation buttons update

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -30,7 +30,7 @@
 <!--Navigation Bar-->
 <div class="navbar">
   <div class="home"><a id="homeImg" href="index.html"><img id="navImage" src="media/nav_logo.png" alt="Moffat Bay Lodge Text Logo"/></a></div>
-  <a class="rightNav" href="login.jsp">Reserve</a>
+  <a class="rightNav" href="reservation.jsp">Reserve</a>
   <a class="rightNav" href="">Attractions</a>
   <a class="rightNav" href="about.html">About Us</a>
   <div class="account rightNav">
@@ -64,7 +64,7 @@
         <li id="welcome">Welcome!</li>
         <a href="login.jsp"><li><img alt="login icon" src="media/Login.png"/>Sign In</li></a>
         <a href="userRegistration.jsp"><li><img alt="register icon" src="media/Register.png"/>Register</li></a>
-        <a href="login.jsp"><li><img alt="reserve icon" src="media/BookVaca.png"/>Book Your Vacation</li></a>
+        <a href="reservation.jsp"><li><img alt="reserve icon" src="media/BookVaca.png"/>Book Your Vacation</li></a>
         <a href="#"><li><img alt="search icon" src="media/Search.png"/>Search Reservations</li></a>
         <div id="menuGrey">
           <div id="greyLinks">
@@ -85,7 +85,7 @@
     <div class="landCover">
       <img id="landLogo" alt="Moffat Bay Lodge Logo" src="media/logo_white.png">
       <p id="landText">Where <span id="luxury">luxury</span> and <br/><span id="adventure">Adventure</span><br/> finds <span id="you">you.</span></p>
-      <div class="learnMore" id="reserveBtn"><a href="login.jsp">Reserve Today</a></div>
+      <div class="learnMore" id="reserveBtn"><a href="reservation.jsp">Reserve Today</a></div>
     </div>
   </div>
   <div class="txt" id="aboutUs">
@@ -128,7 +128,7 @@
   <div class="col3">
     <ul>
       <li><a href="index.html">Home</a></li>
-      <li><a href="login.jsp">Reserve</a></li>
+      <li><a href="reservation.jsp">Reserve</a></li>
       <li><a href="">Search Reservations</a></li>
     </ul>
   </div>
