--- a/src/main/webapp/about.html
+++ b/src/main/webapp/about.html
@@ -1,6 +1,11 @@
 <!DOCTYPE HTML PUBLIC '-//W3C//DTD HTML 4.01//EN'
   'http://www.w3.org/TR/1999/REC-html401-19991224/strict.dtd'>
 <html lang="en">
+<!-- Silver team: Shayla Bradley, Patrick Ellis, Abigail Klein, Yawa Hallo
+Date: 9-10-23
+CSD 460: Assignment 8
+About page 
+ -->
 <head>
   <!--Fonts-->
   <!--Poppins-->
