--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -53,7 +53,7 @@
 			</button>
 			<div class="dropdown-content">
 				<a class="drop1" href="login.jsp">Login</a> <a class="drop2"
-					href="userRegistration.jsp">Register</a> <a class="drop3" href="#">Reservation
+					href="registration.jsp">Register</a> <a class="drop3" href="#">Reservation
 					Search</a>
 			</div>
 		</div>
@@ -166,7 +166,7 @@
 		<div class="col5">
 			<ul>
 				<li><a href="login.jsp">Login</a></li>
-				<li><a href="userRegistration.jsp">Register</a></li>
+				<li><a href="registration.jsp">Register</a></li>
 			</ul>
 		</div>
 	</div>
